class Name():
    def __init__(self, name: str):
        self.__name = name

    def __str__(self):
        return self.__name